crates/toml_edit/tests/snapshots/invalid/integer/arabic-zero-04.stderr
TOML parse error at line 1, column 18
  |
1 | arabic-zero-04 = ٠e0
  |                  ^^^^
string values must be quoted, expected literal string
